@@ -17,6 +17,8 @@ BuildRequires:  gob2
 BuildRequires:  libchewing-devel >= 0.3.2-4
 BuildRequires:  pkgconfig
 BuildRequires:  GConf2-devel
+BuildRequires:  libX11-devel
+BuildRequires:  libXtst-devel
 Requires:   ibus >= 1.1
 Requires:  libchewing >= 0.3.2-4
 Requires:  GConf2
@@ -44,19 +46,19 @@ make install DESTDIR=$RPM_BUILD_ROOT
 if [ "$1" -gt 1 ] ; then
 export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source`
 gconftool-2 --makefile-uninstall-rule \
-%{_sysconfdir}/gconf/schemas/%{name}.schema >/dev/null || :
+%{_sysconfdir}/gconf/schemas/%{name}.schemas >/dev/null || :
 fi
 
 %post
 export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source`
 gconftool-2 --makefile-install-rule \
-%{_sysconfdir}/gconf/schemas/%{name}.schema > /dev/null || :
+%{_sysconfdir}/gconf/schemas/%{name}.schemas > /dev/null || :
 
 %preun
 if [ "$1" -eq 0 ] ; then
 export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source`
 gconftool-2 --makefile-uninstall-rule \
-%{_sysconfdir}/gconf/schemas/%{name}.schema > /dev/null || :
+%{_sysconfdir}/gconf/schemas/%{name}.schemas > /dev/null || :
 fi
 
 %clean
@@ -68,10 +70,13 @@ rm -rf $RPM_BUILD_ROOT
 %{_libexecdir}/ibus-engine-chewing
 %{_datadir}/%{name}
 %{_datadir}/ibus/component/chewing.xml
-%config(noreplace) %{_sysconfdir}/gconf/schemas/%{name}.schema
+%config(noreplace) %{_sysconfdir}/gconf/schemas/%{name}.schemas
 
 %changelog
 * @DATE@ @MAINTAINER@ - @PRJ_VER@-@PRJ_VER_RELEASE@
+- ibus-chewing.schema -> ibus-chewing.schemas
+
+* Tue Mar 03 2009 Ding-Yi Chen <dchen at redhat.com> - 1.0.2.20090303-1
 - Required gconf2 -> GConf2.
 - Fix RPM install issues.
 
