@@ -1,10 +1,10 @@
 # Location of library include files
 INCLUDE_DIRECTORIES(${GTK2_INCLUDE_DIRS} ${IBUS_INCLUDE_DIRS}
-    ${CHEWING_INCLUDE_DIRS} ${GCONF2_INCLUDE_DIRS})
+    ${CHEWING_INCLUDE_DIRS} ${GCONF2_INCLUDE_DIRS} ${X11_INCLUDE_DIRS} ${XTST_INCLUDE_DIRS})
 
 # Library location for the linker
 LINK_DIRECTORIES(${GTK2_LIBRARY_DIRS} ${IBUS_LIBRARY_DIRS}
-    ${CHEWING_LIBRARY_DIRS} ${GCONF2_LIBRARY_DIRS})
+    ${CHEWING_LIBRARY_DIRS} ${GCONF2_LIBRARY_DIRS} ${X11_LIBRARY_DIRS} ${XTST_LIBRARY_DIRS})
 
 #==================================================================
 # Sources
@@ -33,7 +33,7 @@ ADD_EXECUTABLE(ibus-engine-chewing main.c ibus-chewing-engine.c)
 
 # Link the executable to the library.
 TARGET_LINK_LIBRARIES(ibus-engine-chewing ${GTK2_LIBRARIES} ${IBUS_LIBRARIES}
-    ${CHEWING_LIBRARIES} ${GCONF2_LIBRARIES})
+    ${CHEWING_LIBRARIES} ${GCONF2_LIBRARIES} ${X11_LIBRARIES} ${XTST_LIBRARIES})
 
 
 IF(NOT DEFINED LIB_INSTALL_DIR)
@@ -55,26 +55,6 @@ INSTALL(TARGETS ibus-engine-chewing
 INSTALL(FILES chewing.xml
     DESTINATION "${datadir}/ibus/component")
 
-SET(GCONF_CONFIG_SOURCE "")
 
-SET(ENV{GCONF_CONFIG_SOURCE} ${GCONF_CONFIG_SOURCE})
-
-ADD_CUSTOM_TARGET(uninstall_schema
-    COMMAND GCONF_CONFIG_SOURCE=${GCONF_CONFIG_SOURCE} 
-    gconftool-2 --makefile-uninstall-rule ${SYSCONF_INSTALL_DIR}/gconf/schemas/${PROJECT_NAME}.schema
-    DEPENDS ${SYSCONF_INSTALL_DIR}/gconf/schemas/${PROJECT_NAME}.schema
-    COMMENT "Install_schema"
-    )
-
-ADD_CUSTOM_TARGET(install_schema
-    COMMAND GCONF_CONFIG_SOURCE=${GCONF_CONFIG_SOURCE}
-    gconftool-2 --makefile-install-rule ${SYSCONF_INSTALL_DIR}/gconf/schemas/${PROJECT_NAME}.schema
-    DEPENDS ${PROJECT_NAME}.schema
-    COMMENT "Install_schema"
-    )
-    
-
-INSTALL(FILES ibus-chewing.schema
-    DESTINATION "${SYSCONF_INSTALL_DIR}/gconf/schemas")
-
+INCLUDE(GConf)
 
