@@ -1,3 +1,8 @@
+  Google issue 305:  ibus-chewing.schema -> ibus-chewing.schemas
+  Google issue 306:  hardcoded chewing datadir
+  Sync chewing candPerPage and IBusTable->page_size
+ 
+* Tue Mar 03 2009 Ding-Yi Chen <dchen at redhat.com> - 1.0.2.20090303-1
   Required gconf2 -> GConf2.
   Fix RPM scriptlet.
 
